se implementa funcionalidad del carrusel con servicios dummy

--- a/segurenta/src/app/shared/components/carousel/carousel.component.css
+++ b/segurenta/src/app/shared/components/carousel/carousel.component.css
@@ -35,3 +35,7 @@ input.input-transparent::placeholder {
 .btn-dark {
     background-color: #000 !important;
 }
+
+.img-carousel{
+    height: 90vh;
+}
