--- a/segurenta/src/app/shared/components/footer/footer.component.html
+++ b/segurenta/src/app/shared/components/footer/footer.component.html
@@ -24,28 +24,28 @@
                 <div class="col-sm-12 mt-2 mb-2">
                     <a [href]="link.linkFacebook" target="_blank">
                         <button class="btn btn-sm btn-light rounded-circle" width="20" heigth="20">
-                        <!-- <fa-icon [icon]="[ 'fab', 'facebook-f']"></fa-icon> -->
+                        <fa-icon [icon]="[ 'fab', 'facebook-f']"></fa-icon>
                     </button>
                     </a>
                 </div>
                 <div class="col-sm-12 mb-2">
                     <a [href]="link.linkInstagram" target="_blank">
                         <button class="btn btn-sm btn-light rounded-circle" width="20" heigth="20">
-                        <!-- <fa-icon [icon]="[ 'fab', 'instagram']"></fa-icon> -->
+                        <fa-icon [icon]="[ 'fab', 'instagram']"></fa-icon>
                     </button>
                     </a>
                 </div>
                 <div class="col-sm-12 mb-2">
                     <a [href]="link.linkTwitter" target="_blank">
                         <button class="btn btn-sm btn-light rounded-circle" width="20" heigth="20">
-                            <!-- <fa-icon [icon]="[ 'fab', 'twitter']"></fa-icon> -->
+                            <fa-icon [icon]="[ 'fab', 'twitter']"></fa-icon>
                         </button>
                     </a>
                 </div>
                 <div class="col-sm-12 mb-2">
                     <a [href]="link.linkLinkedIn" target="_blank">
                         <button class="btn btn-sm btn-light rounded-circle" width="20" heigth="20">
-                            <!-- <fa-icon [icon]="[ 'fab', 'linkedin-in']"></fa-icon> -->
+                            <fa-icon [icon]="[ 'fab', 'linkedin-in']"></fa-icon>
                         </button>
                     </a>
                 </div>
