--- a/segurenta/src/app/shared/components/explorar-zona/explorar-zona.component.html
+++ b/segurenta/src/app/shared/components/explorar-zona/explorar-zona.component.html
@@ -1,9 +1,9 @@
 <div class="row col-12 m-0 p-0 ">
     <div class="col-sm " style="background-color: #0D62B7;border-right: 1px solid white; ">
         <div class="col-sm-12 mx-0 p-0 my-4 ">
-            <h3 class="font-weight-bold text-white "><span class="txt-muted "><u>E</u>xplorar</span> Zonas </h3>
+            <h3 class="text-white "><span class="txt-muted "><u>E</u>xplorar</span> Zonas </h3>
         </div>
-        <div class="card-deck ">
+        <div class="card-deck">
             <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem; " *ngFor="let picture of picturesZone ">
                 <img class="card-img-top " [src]="picture.img ">
                 <div class="card-img-overlay right ">
@@ -19,7 +19,7 @@
     </div>
     <div class="col-sm " style="background-color: #0D62B7;border-left: 1px solid white; ">
         <div class="col-sm-12 mx-0 p-0 my-4 ">
-            <h3 class="font-weight-bold text-white "><span class="txt-muted "><u>E</u>xplorar</span> Categorías </h3>
+            <h3 class="text-white"><span class="txt-muted "><u>E</u>xplorar</span> Categorías </h3>
         </div>
         <div class="card-deck ">
             <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem; " *ngFor="let picture of picturesZone ">
