--- a/segurenta/src/app/shared/components/navbar/navbar.component.html
+++ b/segurenta/src/app/shared/components/navbar/navbar.component.html
@@ -5,20 +5,22 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
-        <button class="btn btn-sm btn-outline-light btn-block m-1 col-1" type="button" style="border-radius: 8px; font-size: 0.7rem;" (click)="openRegister()">Registrarse</button>
-        <button class="btn btn-sm btn-outline-light btn-block m-1 col-1" type="button" style="border-radius: 8px; font-size: 0.7rem;" (click)="openLogin() ">Entrar</button>
+    <div *ngIf="!(isLoggedIn | async)" class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+        <button class="btn btn-sm btn-outline-light btn-block m-1 col-1 thin" type="button" style="border-radius: 8px; font-size: 0.7rem;" (click)="openRegister()">Registrarse</button>
+        <button class="btn btn-sm btn-outline-light btn-block m-1 col-1 thin" type="button" style="border-radius: 8px; font-size: 0.7rem;" (click)="openLogin() ">Entrar</button>
     </div>
 
-    <!-- <div *ngIf="isLoggedIn$ | async " class="collapse navbar-collapse d-flex justify-content-end ">
-        <a class="btn btn-default btn-link text-white ">
+    <div *ngIf="isLoggedIn | async" class="collapse navbar-collapse d-flex justify-content-end">
+        <a class="btn btn-default btn-link text-white">
             <fa-icon class="pr-3 " [icon]="[ 'fas', 'bell'] "></fa-icon>
         </a>
         <span class="badge badge-notify rounded-circle text-white thin">9</span>
-        <a (click)="openUpdateRenterData() " role="button ">
-            <img src="./assets/img/usrPrueba.png " class="rounded-circle " width="30 " height="30 ">
+        <a (click)="openUpdateRenterData()" role="button">
+            <img src="./assets/img/usrPrueba.png" class="rounded-circle" width="30" height="30">
         </a>
-    </div> -->
+    </div>
+
+
 </nav>
 <!--
 <div *ngIf="isRenter " class="modal fade bd-example-modal-lg " id="myModal " tabindex="-1 " role="dialog " aria-labelledby="exampleModalLabel " aria-hidden="true ">
