--- a/segurenta/src/app/shared/components/propiedades-recientes/propiedades-recientes.component.html
+++ b/segurenta/src/app/shared/components/propiedades-recientes/propiedades-recientes.component.html
@@ -2,54 +2,100 @@
 <div class="container-fluid">
     <div class="col-sm-12">
         <div class="my-4">
-            <h2 class="font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
+            <h2><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let picture of pictures">
-                    <div class="card card-hover border-0">
-                            <img class="card-img-top" [src]="picture.img">
-                            <div class="card-img-overlay">
-                                <div class="reveal bg-gray p-2">
-                                    <div class="row">
-                                        <div class="col-6">
-                                                <a class="icon-left">
-                                                    <!-- <fa-icon class="icon" [icon]="[ 'fas', 'play']"></fa-icon> -->
-                                                    <br><span class="text-card-white icon-left">Video</span></a>
-                                        </div>
-                                        <div class="col-6 icon-left">
-                                                <!-- <a [routerLink]="['/property-detail']"> -->
-                                                <a>
-                                                    <!-- <fa-icon class="icon" [icon]="[ 'fas', 'ellipsis-v']"></fa-icon> -->
-                                                    <br><span class="text-card-white">Más</span></a>
-                                            </div>
-                                    </div>
-    
-                                        
-                                       
-                                    </div>
+                <div class="card card-hover border-0">
+                    <img class="card-img-top" [src]="picture.img">
+                    <div class="card-img-overlay">
+                        <div class="reveal bg-gray p-2">
+                            <div class="row">
+                                <div class="col-6">
+                                    <a class="icon-left" data-toggle="modal" data-target=".property-video-modal">
+                                        <fa-icon class="icon" [icon]="[ 'fas', 'play']"></fa-icon>
+                                        <br><span class="text-card-white icon-left">Video</span></a>
+                                </div>
+                                <div class="col-6 icon-left">
+                                    <!-- <a [routerLink]="['/property-detail']"> -->
+                                    <a>
+                                        <fa-icon class="icon" [icon]="[ 'fas', 'ellipsis-v']"></fa-icon>
+                                        <br><span class="text-card-white">Más</span></a>
+                                </div>
                             </div>
-    
-                <div class="card-body py-1 px-0">
-                    <div class="row">
-                        <div class="col d-none d-lg-block">
-                            <p class="card-text">
-                                <!-- <fa-icon [icon]="[ 'fas', 'expand-arrows-alt']"></fa-icon>150 -->
-                            </p>
+
+
+
                         </div>
-                        <div class="col">
-                            <!-- <fa-icon [icon]="[ 'fas', 'bed']"></fa-icon> -->
-                            <p class="card-text d-inline-block h5">
-                                2
-                            </p>
-                        </div>
-                        <div class="col">
-                            <p class="card-text">
-                                <!-- <fa-icon [icon]="[ 'fas', 'toilet']"></fa-icon> 1 -->
-                            </p>
+                    </div>
+
+                    <div class="card-body py-1 px-0">
+                        <div class="row">
+                            <div class="col d-none d-lg-block">
+                                <p class="card-text">
+                                    <fa-icon [icon]="[ 'fas', 'expand-arrows-alt']"></fa-icon>150
+                                </p>
+                            </div>
+                            <div class="col">
+                                <fa-icon [icon]="[ 'fas', 'bed']"></fa-icon>
+                                <p class="card-text d-inline-block h5">
+                                    2
+                                </p>
+                            </div>
+                            <div class="col">
+                                <p class="card-text">
+                                    <fa-icon [icon]="[ 'fas', 'toilet']"></fa-icon> 1
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
+    <div class="modal fade property-video-modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-xl bg-transparent">
+            <div class="modal-content bg-transparent">
+                <div class="row">
+                    <div class="col-12 rounded d-flex align-items-center" style="height: 75vh;">
+                        <img src="./assets/img/1.jpg" class="col-12 p-0 rounded img-fluid" style="max-height: 67vh;">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 rounded d-flex align-items-center my-2" style="color: white;">
+                        <div class="col-sm-12 col-md-2">
+                            <h5>{{ property.precioRenta | currency }}</h5>
+                        </div>
+                        <div class="col-sm-12 col-md-1">
+                            <fa-icon [icon]="[ 'fas', 'expand-arrows-alt']" size="2x"></fa-icon>150
+                        </div>
+                        <div class="col-sm-12 col-md-1">
+                            <fa-icon [icon]="[ 'fas', 'bed']" size="2x"></fa-icon>3
+                        </div>
+                        <div class="col-sm-12 col-md-1">
+                            <fa-icon [icon]="[ 'fas', 'toilet']" size="2x"></fa-icon>2
+                        </div>
+                        <div class="col-sm-12 col-md-1">
+                            <fa-icon [icon]="[ 'fas', 'bed']" size="2x"></fa-icon>3
+                        </div>
+                        <div class="col-sm-12 col-md-1" style="border-right: white 1px solid;">
+                            <fa-icon [icon]="[ 'fas', 'toilet']" size="2x"></fa-icon>2
+                        </div>
+                        <div class="col-sm-12 col-md-1">
+                            <fa-icon [icon]="[ 'far', 'heart']" size="2x"></fa-icon>
+                        </div>
+                        <div class="col-sm-12 col-md-1">
+                            <fa-icon [icon]="[ 'far', 'heart']" size="2x"></fa-icon>
+                        </div>
+                        <div class="col-sm-12 col-md-1" style="border-right: white 1px solid;">
+                            <fa-icon [icon]="[ 'far', 'heart']" size="2x"></fa-icon>
+                        </div>
+                        <div class="col-sm-12 col-md-1">
+                            <fa-icon [icon]="[ 'fas', 'ellipsis-h']" size="2x"></fa-icon>Más
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
