--- a/segurenta/src/app/shared/components/register/register.component.css
+++ b/segurenta/src/app/shared/components/register/register.component.css
@@ -5,3 +5,17 @@
     text-align: center;
     font-size: 2rem !important;
 }
+
+.titleGrid {
+    border-right: black 1px solid;
+}
+
+.titleGrid ul {
+    list-style: none;
+    margin-left: 15%;
+    margin-right: 100px;
+}
+
+.titleGrid ul li {
+    margin-bottom: 100px;
+}
