--- a/segurenta/src/app/home-adviser/components/menu/menu.component.html
+++ b/segurenta/src/app/home-adviser/components/menu/menu.component.html
@@ -27,7 +27,7 @@
         </div>
         <div class="btn-group-vertical align-items-center mx-5">
             <a>
-                <button class="btn btn-outline-dark rounded-circle" data-toggle="modal" data-target=".register-property-modal" style="height: 100px; width: 100px; color: white">
+                <button class="btn btn-outline-dark rounded-circle"  style="height: 100px; width: 100px; color: white">
                           <!-- <fa-icon [icon]="[ 'fas', 'plus']" size="2x"></fa-icon> -->
                 </button>
             </a>
