--- a/segurenta/src/app/shared/components/register-property/register-property.component.html
+++ b/segurenta/src/app/shared/components/register-property/register-property.component.html
@@ -1,4 +1,4 @@
-<div class="col-12">
+<div class="col-12 bgBlue">
         <div class="row">
             <div class="col-1">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-    <div class="col-12">
+    <div class="col-12 bgBlue">
         <div class="row">
             <div class="col-1 text-center">
                 <div class="row">
@@ -180,187 +180,7 @@
         </div>
     </div>
 
-<div class="col-12">
-                <div class="row">
-                    <div class="col-1">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <h1 class="thin" style="color:white">X</h1>
-                        </button>
-                        <!-- <a class="col-12 thin" data-dismiss="modal">
-                            <h1 class="thin" style="color:white; font-size: 8rem;">x</h1>
-                        </a> -->
-                        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true" class="thin" style="font-size: 8em;">&times;</span>
-                              </button> -->
-                    </div>
-                    <div class="col-11">
-                        <div class="text-right align-middle">
-                            <h1 class="thin" style="color: white; font-size: 4rem !important;">Crear Propiedad</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-1 text-center">
-                        <div class="row">
-                            <div class="col-12 my-3">
-                                <div class="btn-group-vertical align-items-center">
-                                    <a style="color: white;">
-                                        <fa-icon [icon]="[ 'fas', 'angle-up']" size="2x"></fa-icon>
-                                    </a>
-                                    <p class="thin m-0 small" style="color: white;">Atrás</p>
-                                </div>
-                            </div>
-                            <div class="col-12 my-3 ">
-                                <button (click)="step(1)" class="btn btn-sm btn-dark rounded-circle active" style="height: 40px; width: 40px ">
-                                    1
-                                </button>
-                            </div>
-                            <div class="col-12 my-3 ">
-                                <button (click)="step(2)" class="btn btn-sm btn-dark rounded-circle " style="height: 40px; width: 40px ">
-                                    2
-                                </button>
-                            </div>
-                            <div class="col-12 my-3 ">
-                                <button (click)="step(3)" class="btn btn-sm btn-dark rounded-circle " style="height: 40px; width: 40px ">
-                                    3
-                                </button>
-                            </div>
-                            <div class="col-12 my-3 ">
-                                <button (click)="step(4)" class="btn btn-sm btn-dark rounded-circle " style="height: 40px; width: 40px ">
-                                    4
-                                </button>
-                            </div>
-                            <div class="col-12 my-3">
-                                <div class="btn-group-vertical align-items-center">
-                                    <p class="thin m-0 small" style="color: white;">Siguiente</p>
-                                    <a style="color: white;">
-                                        <fa-icon [icon]="[ 'fas', 'angle-down']" size="2x"></fa-icon>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-11">
-                        <div class="row">
-                            <div *ngIf="n === 1" class="col-12">
-                                <form>
-                                    <hr>
-                                    <h3 style="color: white;">Video y fotos Propiedad</h3>
-                                    <div class="col-12 row ">
-                                        <div class="col-8 ">
-                                            <div class="row ">
-                                                <h4 class="thin" style="color: white;">Arrastra tus archivos o da click para subir</h4>
-                                            </div>
-                                            <div class="row ">
-                                                <app-upload-image></app-upload-image>
-                                            </div>
-                                        </div>
-                                        <div class="col-4 ">
-                                            <app-upload-video></app-upload-video>
-                                        </div>
-                                    </div>
-                                    <button class="btn btn-outline-light btn-sm">Guardar para después</button>
-                                </form>
-                            </div>
-                            <div *ngIf="n === 2" class="col-12">
-                                <form autocomplete="off ">
-                                    <hr>
-                                    <h3 style="color: white;">Tipo de Propiedad</h3>
-                                    <div class="col-12 ">
-                                        <button type="button " class="btn rounded btn-outline-dark col-2 m-1 " [ngClass]="{ 'active': item.selected, 'inactive': !item.selected } " (click)="selectProperty(item.id) " *ngFor="let item of typeProperties ">
-                                                    {{ item.value }}
-                                                </button>
-                                    </div>
-                                    <h3>Precio</h3>
-                                    <div class="d-inline mr-5 ">
-                                        <mat-label>$ </mat-label>
-                                        <mat-form-field>
-                                            <input type="number " matInput required>
-                                        </mat-form-field>
-                                        <mat-label> Renta al mes</mat-label>
-                                    </div>
-                                    <div class="d-inline mx-5 ">
-                                        <mat-label>$ </mat-label>
-                                        <mat-form-field>
-                                            <input type="number " matInput required>
-                                        </mat-form-field>
-                                        <mat-label> Precio de venta</mat-label>
-                                    </div>
-                                    <div class="d-inline ml-5 ">
-                                        <mat-label>$ </mat-label>
-                                        <mat-form-field>
-                                            <input type="number " matInput required>
-                                        </mat-form-field>
-                                        <mat-label> Mantenimiento</mat-label>
-                                    </div>
-                                    <button class="btn btn-outline-light btn-sm">Guardar para después</button>
-                                </form>
-                            </div>
-                            <div *ngIf="n === 3" class="col-12">
-                                <hr>
-                                <h3 style="color: white;">Dirección</h3>
-                                <div class="col-12 row">
-                                    <div class="col-5 ">
-                                        <!-- <app-map></app-map> -->
-                                    </div>
-                                    <div class="col">
-                                        <form autocomplete="off ">
-                                            <mat-form-field class="full-width ">
-                                                <input autocomplete="off" type="text" matInput placeholder="Nombre del inmueble (Alias) " required>
-                                            </mat-form-field>
-                                            <div class="row ">
-                                                <div class="col-8 ">
-                                                    <mat-form-field class="full-width ">
-                                                        <input type="text " matInput placeholder="Calle, Num. Ext. e Int. " required>
-                                                    </mat-form-field>
-                                                </div>
-                                                <div class="col-4 ">
-                                                    <mat-form-field class="full-width ">
-                                                        <input type="text " matInput placeholder="C.P. " required>
-                                                    </mat-form-field>
-                                                </div>
-                                            </div>
-                                            <div class="row ">
-                                                <div class="col ">
-                                                    <mat-form-field class="full-width ">
-                                                        <input type="text " matInput placeholder="Del. " required>
-                                                    </mat-form-field>
-                                                </div>
-                                                <div class="col ">
-                                                    <mat-form-field class="full-width ">
-                                                        <input type="text " matInput placeholder="Col. " required>
-                                                    </mat-form-field>
-                                                </div>
-                                            </div>
-                                            <div class="row ">
-                                                <div class="col ">
-                                                    <mat-form-field class="full-width ">
-                                                        <input type="text " matInput placeholder="Ciudad " required>
-                                                    </mat-form-field>
-                                                </div>
-                                                <div class="col ">
-                                                    <mat-form-field class="full-width ">
-                                                        <input type="text " matInput placeholder="País " required>
-                                                    </mat-form-field>
-                                                </div>
-                                            </div>
-                                            <mat-form-field class="full-width ">
-                                                <textarea matInput placeholder="Descripción general de la propiedad " required></textarea>
-                                            </mat-form-field>
-                                            <button class="btn btn-outline-light btn-sm">Guardar para después</button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div *ngIf="n === 4" class="col-12">
-                                <p>4</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
 
 <div class="modal fade register-property-modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-xl bgBlue">
