--- a/segurenta/src/app/shared/components/register/register.component.html
+++ b/segurenta/src/app/shared/components/register/register.component.html
@@ -6,28 +6,30 @@
         <ul>
             <li *ngIf="!isRenter" class="txt-subtitle">
                 <a (click)="changeRegister(1)">Rentar</a>
+                <button (click)="llenar1()"></button>
             </li>
             <li *ngIf="isRenter" class="txt-subtitle">
                 <a (click)="changeRegister(2)">Publicar</a>
+                <button (click)="llenar2()"></button>
             </li>
         </ul>
     </mat-grid-tile>
     <mat-grid-tile colspan="5" style="margin-left:1%;">
         <form [formGroup]="registerForm" (ngSubmit)="register()" novalidate="novalidate">
             <mat-form-field class="full-width">
-                <input type="text" class="input-form" matInput placeholder="Nombre(s)" [(ngModel)]="regist.names" formControlName="names">
+                <input type="text" class="input-form" matInput placeholder="Nombre(s)" [(ngModel)]="regist.nombres" formControlName="names">
                 <mat-error *ngIf="registerForm.get('names').invalid">{{getErrorMessage("names")}}</mat-error>
             </mat-form-field>
             <mat-form-field style="padding-right: 10%;">
-                <input type="text" class="input-form" matInput placeholder="Apellido Paterno" [(ngModel)]="regist.firstLastName" formControlName="firstLastName">
+                <input type="text" class="input-form" matInput placeholder="Apellido Paterno" [(ngModel)]="regist.paterno" formControlName="firstLastName">
                 <mat-error *ngIf="registerForm.get('firstLastName').invalid">{{getErrorMessage("firstLastName")}}</mat-error>
             </mat-form-field>
             <mat-form-field>
-                <input type="text" class="input-form" matInput placeholder="Apellido Materno" [(ngModel)]="regist.secondLastName" formControlName="secondLastName">
+                <input type="text" class="input-form" matInput placeholder="Apellido Materno" [(ngModel)]="regist.materno" formControlName="secondLastName">
                 <mat-error *ngIf="registerForm.get('secondLastName').invalid">{{getErrorMessage("secondLastName")}}</mat-error>
             </mat-form-field>
             <mat-form-field class="full-width">
-                <input type="tel" class="input-form" matInput placeholder="Teléfono" [(ngModel)]="regist.phoneNumber" formControlName="phoneNumber">
+                <input type="tel" class="input-form" matInput placeholder="Teléfono" [(ngModel)]="regist.telefono" formControlName="phoneNumber">
                 <mat-error *ngIf="registerForm.get('phoneNumber').invalid">{{getErrorMessage("phoneNumber")}}</mat-error>
             </mat-form-field>
             <mat-form-field class="full-width">
@@ -35,7 +37,7 @@
                 <mat-error *ngIf="registerForm.get('email').invalid">{{getErrorMessage("email")}}</mat-error>
             </mat-form-field>
             <mat-form-field class="full-width">
-                <input type="password" class="input-form" matInput placeholder="Contraseña" #regist.password formControlName="password">
+                <input type="password" class="input-form" matInput placeholder="Contraseña" [(ngModel)]="regist.password" formControlName="password">
                 <mat-error *ngIf="registerForm.get('password').invalid">{{getErrorMessage("password")}}</mat-error>
             </mat-form-field>
             <span *ngIf="isRenter">
@@ -63,7 +65,7 @@
             <h3 class="full-width">¿En dónde quiero mis comisiones?</h3>
             <mat-form-field class="full-width">
                 <mat-label>Institución Bancaria</mat-label>
-                <mat-select matInput [(value)]="regist.bankName" [(ngModel)]="regist.bankName" formControlName="bankName">
+                <mat-select matInput [(value)]="regist.banco" [(ngModel)]="regist.banco" formControlName="bankName">
                     <mat-option *ngFor="let item of catBancos" [value]="item.id">{{item.corta}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="registerForm.get('bankName').invalid">{{getErrorMessage("bankName")}}</mat-error>
