--- a/segurenta/src/app/shared/components/navbar/navbar.component.css
+++ b/segurenta/src/app/shared/components/navbar/navbar.component.css
@@ -26,3 +26,17 @@
 .mid-width {
     width: 40%;
 }
+
+.title-profile {
+    font-size: 1.8rem !important;
+    color: #0D62B7 !important;
+}
+
+.item-profile {
+    font-size: 1.2rem !important;
+    color: #BABABA;
+}
+
+.active-item {
+    color: #0D62B7 !important;
+}
