--- a/segurenta/src/app/shared/components/navbar/navbar.component.html
+++ b/segurenta/src/app/shared/components/navbar/navbar.component.html
@@ -10,14 +10,42 @@
         <button class="btn btn-sm btn-outline-light btn-block m-1 col-1 thin" type="button" style="border-radius: 8px; font-size: 0.7rem;" (click)="openLogin() ">Entrar</button>
     </div>
 
-    <div *ngIf="isLoggedIn | async" class="collapse navbar-collapse d-flex justify-content-end">
+    <div *ngIf="!(isLoggedIn | async)" class="collapse navbar-collapse d-flex justify-content-end">
         <a class="btn btn-default btn-link text-white">
             <fa-icon class="pr-3 " [icon]="[ 'fas', 'bell'] "></fa-icon>
         </a>
         <span class="badge badge-notify rounded-circle text-white thin">9</span>
-        <a (click)="openUpdateRenterData()" role="button">
+        <div class="dropdown">
+            <a class="rounded-circle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <img [src]="datosUsuario.imagen" class="rounded-circle" width="50" height="50">
+            </a>
+            <div class="dropdown-menu dropdown-menu-right text-right" aria-labelledby="dropdownMenuButton">
+                <h2 class="dropdown-header title-profile"><small class="h6">Sesión Actual</small> {{ datosUsuario.tipousuarioDefault }}</h2>
+                <a class="dropdown-item-text item-profile thin py-0" href="#">Editar Perfil</a>
+                <a class="dropdown-item-text item-profile mb-5 py-0" href="#"><small class="thin">Cerrar Sesión</small></a>
+                <!-- <div class="dropdown-divider"></div> -->
+                <h2 class="dropdown-header thin item-profile">Mis Cuentas</h2>
+                <div class="d-flex">
+                    <div>
+                        <span *ngFor="let cuenta of datosUsuario.cuentas" class="dropdown-item-text item-profile thin py-0" href="#">{{ cuenta.descripcion }}</span>
+                        <!-- <span class="dropdown-item-text item-profile thin active-item" disabled href="#">Publicar</span>
+                        <span class="dropdown-item-text item-profile thin" href="#">Propietario</span> -->
+                    </div>
+                    <div *ngIf="datosUsuario.cuentas.length > 1">
+                        <a *ngFor="let cuenta of datosUsuario.cuentas" class="dropdown-item-text item-profile py-0" href="#"><small class="thin">Estado</small></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-2">
+            <p class="row text-left m-0 thin small">{{ datosUsuario.nombre }}</p>
+            <p class="row text-left m-0 thin small">{{ datosUsuario.tipousuarioDefault }}</p>
+        </div>
+
+        <!-- <a (click)="openUpdateRenterData()" role="button">
             <img src="./assets/img/usrPrueba.png" class="rounded-circle" width="30" height="30">
-        </a>
+        </a> -->
     </div>
 
 
