--- a/segurenta/src/app/shared/components/navbar/navbar.component.css
+++ b/segurenta/src/app/shared/components/navbar/navbar.component.css
@@ -40,3 +40,19 @@
 .active-item {
     color: #0D62B7 !important;
 }
+
+.pointer {
+    cursor: pointer;
+}
+
+.drop-with {
+    min-width: max-content;
+}
+
+.no-padding {
+    padding: 0%
+}
+
+.cuenta-text {
+    text-align: left;
+}
