se corrigen modulos para google maps

--- a/segurenta/src/app/shared/components/register-property/map/map.component.html
+++ b/segurenta/src/app/shared/components/register-property/map/map.component.html
@@ -1,4 +1,3 @@
-<!-- <agm-map class="m-1" [latitude]="lat" [longitude]="lng" [zoom]="15">
+<agm-map class="m-1" [latitude]="lat" [longitude]="lng" [zoom]="15">
     <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-</agm-map> -->
-<div #map style=”width:100%;height:400px”></div>
+</agm-map>
