--- a/segurenta/src/app/home/home.component.html
+++ b/segurenta/src/app/home/home.component.html
@@ -12,16 +12,26 @@
         <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card card-hover border-0">
                 <img class="card-img-top " src="./assets/img/1.jpg">
-                <div class="card-img-overlay d-flex align-content-between flex-wrap">
-                    <div class="row col-12 p-0" style="background-color: rgba(255, 255, 255, 0.58); width: 100%;">
+                <div class="card-img-overlay">
+                    <div class="row" style="background-color: rgba(255, 255, 255, 0.58);">
+                        <div class="col-6">
+                            <p class="h4 text-white font-weight-bold">Disponible</p>
+                        </div>
+                        <div class="col-6">
+                            <p class="h4 text-white">17,000</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="card-img-overlay d-flex align-content-between flex-wrap">
+                    <div class="row w-100" style="background-color: rgba(255, 255, 255, 0.58);">
                         <p class="h4 text-white font-weight-bold">Disponible</p>
                         <p class="h4 text-white">17,000</p>
                     </div>
-                    <div class="row col-12 p-0" style="background-color: rgba(255, 255, 255, 0.58);">
+                    <div class="row w-100" style="background-color: rgba(255, 255, 255, 0.58);">
                         <p class="col-12 p-0 mb-0 text-white font-weight-bold">Renta de Oficina</p>
                         <p class="col-12 p-0 mb-0 text-white font-weight-bold">Perisur, CDMX</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
