--- a/segurenta/src/app/shared/components/register-property/register-property.component.html
+++ b/segurenta/src/app/shared/components/register-property/register-property.component.html
@@ -65,7 +65,8 @@
                                                             {{ item.value }}
                                                         </button>
                                             </div>
-                                            <h3>Precio</h3>
+                                            <br>
+                                            <h3 class="text-blue">Precio</h3>
                                             <div class="d-inline mr-5 ">
                                                 <mat-label>$ </mat-label>
                                                 <mat-form-field>
@@ -94,10 +95,10 @@
                         </div>
                         <div *ngIf="n === 1" class="col-12">
                             <hr>
-                            <h3 style="color: white;">Dirección</h3>
+                            <h3 class="text-blue">Dirección</h3>
                             <div class="col-12 row">
                                 <div class="col-5 ">
-                                    <app-map></app-map>
+                                    <!-- <app-map></app-map> -->
                                 </div>
                                 <div class="col">
                                     <form autocomplete="off ">
