--- a/segurenta/src/app/shared/components/propiedades-recientes/propiedades-recientes.component.html
+++ b/segurenta/src/app/shared/components/propiedades-recientes/propiedades-recientes.component.html
@@ -1,6 +1,53 @@
 <!-- Second section: Propiedades Màs Recientes  -->
 <div class="container-fluid">
+
     <div class="col-sm-12">
+        <div class="my-4">
+            <h2><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let picture of pictures">
+                <div class="card">
+                    <img class="card-img-top img-fluid" [src]="picture.img" style="height: 30vh !important;">
+                    <div class="card-img-overlay p-0" style="height: 30vh !important;">
+                        <div class="row box-info d-flex align-content-between flex-wrap">
+                            <div class="row box-title">
+                                <div class="col-6 text-left">
+                                    <p class="h5 text-white font-weight-bold text-break text-responsive">{{ picture.state }}</p>
+                                </div>
+                                <div class="col-6 text-right">
+                                    <p class="h5 mb-0 text-white text-break text-responsive">{{ picture.price | currency }}</p>
+                                    <small class="text-white small-responsive text-responsive">{{ picture.period }}</small>
+                                </div>
+                            </div>
+                            <div class="row box-footer">
+                                <div class="col-12 text-left">
+                                    <p class="mb-0 text-white font-weight-bold text-break">{{ picture.propertyType }}</p>
+                                    <small class="text-white font-weight-bold text-break small-responsive">{{ picture.location }}</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row reveal d-flex align-content-center flex-wrap">
+                            <div class="flex-fill text-center">
+                                <a class="" data-toggle="modal" data-target=".property-video-modal">
+                                    <fa-icon class="icon" [icon]="[ 'fas', 'play']"></fa-icon>
+                                    <small class="text-white">Video</small>
+                                </a>
+                            </div>
+                            <div class="flex-fill text-center">
+                                <a class="">
+                                    <fa-icon class="icon" [icon]="['fas', 'ellipsis-h']"></fa-icon>
+                                    <small class="text-white">Más</small>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="col-sm-12">
         <div class="my-4">
             <h2><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
         </div>
@@ -16,9 +63,9 @@
                                         <fa-icon class="icon" [icon]="[ 'fas', 'play']"></fa-icon>
                                         <br><span class="text-card-white icon-left">Video</span></a>
                                 </div>
-                                <div class="col-6 icon-left">
-                                    <!-- <a [routerLink]="['/property-detail']"> -->
-                                    <a>
+                                <div class="col-6 icon-left"> -->
+    <!-- <a [routerLink]="['/property-detail']"> -->
+    <!-- <a>
                                         <fa-icon class="icon" [icon]="[ 'fas', 'ellipsis-v']"></fa-icon>
                                         <br><span class="text-card-white">Más</span></a>
                                 </div>
@@ -52,7 +99,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="modal fade property-video-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-xl bg-transparent">
