--- a/segurenta/src/app/shared/components/scheduler/calendar/calendar.component.html
+++ b/segurenta/src/app/shared/components/scheduler/calendar/calendar.component.html
@@ -3,9 +3,6 @@
 </div> -->
 
 <div class="row text-center">
-    <!-- <div class="col-12">
-        <input type="text" mwlFlatpickr [(ngModel)]="lol" [altInput]="true" [convertModelValue]="true">
-    </div> -->
     <div class="col-1 text-center cursor_pointer" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate">
         <h1>&lsaquo;</h1>
     </div>
@@ -37,8 +34,8 @@
 
 
         <div [ngSwitch]="view">
-            <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [refresh]="refresh" [locale]="locale" [events]="events" (beforeViewRender)="beforeMonthViewRender($event)" (dayClicked)="dayClicked($event.day)">
-            </mwl-calendar-month-view>
+            <!-- <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [refresh]="refresh" [locale]="locale" [events]="events" (beforeViewRender)="beforeMonthViewRender($event)" (dayClicked)="dayClicked($event.day)">
+            </mwl-calendar-month-view> -->
             <mwl-calendar-week-view *ngSwitchCase="'week'" [viewDate]="viewDate" [events]="events" [locale]="locale">
             </mwl-calendar-week-view>
             <!-- <mwl-calendar-day-view *ngSwitchCase="'day'" [viewDate]="viewDate" [events]="events" [locale]="locale" (beforeViewRender)="beforeDayViewRender($event.body.hourGrid)" (hourSegmentClicked)="hourSegmentClicked($event.date)">
