--- a/segurenta/src/app/shared/components/scheduler/scheduler.component.css
+++ b/segurenta/src/app/shared/components/scheduler/scheduler.component.css
@@ -10,3 +10,12 @@ pre {
 .cursor_pointer {
     cursor: pointer;
 }
+
+.fondo {
+    background: #d2d2d2;
+}
+
+.txt-title-muted {
+    font-size: 1.5rem !important;
+    color: #FFFFFF;
+}
