--- a/segurenta/src/styles.css
+++ b/segurenta/src/styles.css
@@ -3,6 +3,7 @@
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
+@import "../node_modules/flatpickr/dist/flatpickr.css";
 
 /* @font-face {
     font-family: 'Montserrat';
